chore: Adding google analytics to website
Signed-off-by: Chris Butler <chris@thebutlers.me>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -147,3 +147,8 @@ theme:
     accent: purple
     primary: teal
     scheme: slate
+extra:
+  analytics:
+    provider: google
+    property: G-XT3KGMHSY8
+
