fix: Correct packages
Signed-off-by: Chris Butler <chris@thebutlers.me>

--- a/setup.cfg
+++ b/setup.cfg
@@ -37,6 +37,7 @@ install_requires =
     pywin32 >= 1.0;platform_system=='Windows'
     defusedxml
     openpyxl~=3.0
+    Jinja2 >= 3.0.1
     
 [options.package_data]
 trestle.resources = 
@@ -55,7 +56,6 @@ console_scripts =
 
 [options.extras_require]
 dev =
-	defusedxml
     pytest>=5.4.3
     pytest-cov>=2.10.0
     pytest-xdist
