fix: Ensure a minimimal code base is delivered via pypi
Signed-off-by: Chris Butler <chris@thebutlers.me>

--- a/setup.cfg
+++ b/setup.cfg
@@ -22,7 +22,7 @@ long_description_content_type = text/markdown
 long_description = file: README.md
 
 [options]
-packages = find:
+packages = trestle
 install_requires =
     attrs~=19.3
     ilcli
