fix: Emergency fix for trestle packaging. (#751)
* fix: Emergency fix for trestle packaging.

Signed-off-by: Chris Butler <chris@thebutlers.me>

* fix: move install_requeest back into the correct setup.cfg section.

Signed-off-by: Chris Butler <chris@thebutlers.me>

--- a/setup.cfg
+++ b/setup.cfg
@@ -5,7 +5,7 @@ description = Tools to manage & autogenerate python objects representing the OSC
 author = IBM
 author_email = chris.butler@au1.ibm.com
 license = Apache Software License v2
-url = https://github.com/IBM/compliance-trestle
+url = https://ibm.github.io/compliance-trestle
 classifiers =
     Development Status :: 4 - Beta
     Environment :: Console
@@ -20,9 +20,11 @@ classifiers =
     Programming Language :: Python :: 3.9
 long_description_content_type = text/markdown
 long_description = file: README.md
-
+python_require= '>=3.7'
 [options]
-packages = trestle
+packages = find:
+include_package_data = True
+
 install_requires =
     attrs~=19.3
     ilcli
@@ -38,14 +40,10 @@ install_requires =
     defusedxml
     openpyxl~=3.0
     Jinja2 >= 3.0.1
-    
-[options.package_data]
-trestle.resources = 
-    *.ini
 
 [options.packages.find]
-exclude =
-    tests
+include = trestle*
+exclude = tests
 
 [bdist_wheel]
 universal = 1
