fix: Add check for yaml files syntax
Signed-off-by: Chris Butler <chris@thebutlers.me>

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -4,6 +4,7 @@ repos:
     hooks:
       - id: check-merge-conflict
       - id: check-yaml
+        exclude: "tests/data/yaml/bad_simple.yaml"
       - id: no-commit-to-branch
         args: [--branch, develop, --branch, main]
   - repo: https://github.com/pre-commit/mirrors-yapf
