fix: Added more checks for pylint.
Signed-off-by: Chris Butler <chris@thebutlers.me>

--- a/setup.cfg
+++ b/setup.cfg
@@ -73,7 +73,8 @@ dev =
     markdown-include
     pymdown-extensions
     livereload
-    ## Constrain system 
+    ## Constrain system
+    pylint
 
    
     
