chore:Adding extra developer documentation
Signed-off-by: Chris Butler <chris@thebutlers.me>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -31,6 +31,7 @@ nav:
   - Contributors: https://github.com/IBM/compliance-trestle/graphs/contributors
   - Maintainers: maintainers.md
   - Documentation website: contributing/website.md
+  - Trestle's object model: contributing/trestle_oscal_object_model.md
   - Developer Certificate of Originality: contributing/DCO.md
 - Known limitations: errors.md
 - Demos: demonstrations-content.md
