--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -130,10 +130,11 @@ jobs:
       if: ${{ matrix.os == 'ubuntu-latest' && matrix.python-version == '3.7' }}
       run: |
         make test-cov
-    - name: Push code-cov
+    - name: Run coveralls
       if: ${{ matrix.os == 'ubuntu-latest' && matrix.python-version == '3.7' }}
-      uses: codecov/codecov-action@v1
-      with: 
-        token: ${{ secrets.CODECOV_TOKEN }}
-        file: ./coverage.xml
+      env:
+          GITHUB_TOKEN: ${{ secrets.ADMIN_PAT }}
+      run: |
+          coveralls --service=github
+    
  
