chore: Force clean coveralls install.
Signed-off-by: Chris Butler <chris@thebutlers.me>

--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -135,6 +135,8 @@ jobs:
       env:
           GITHUB_TOKEN: ${{ secrets.ADMIN_PAT }}
       run: |
+          pip uninstall python-coveralls
+          pip install coveralls
           coveralls --service=github
     
  
