chore: Force clean coveralls install.
Signed-off-by: Chris Butler <chris@thebutlers.me>

--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -137,6 +137,6 @@ jobs:
       run: |
           pip uninstall python-coveralls
           pip install coveralls
-          coveralls --service=github
+          coveralls --service=github-actions
     
  
