fix:Update for SONAR to use coverage.xml
Signed-off-by: Chris Butler <chris@thebutlers.me>

--- a/setup.cfg
+++ b/setup.cfg
@@ -114,3 +114,6 @@ init_forbid_extra = True
 init_typed = True
 warn_required_dynamic_aliases = True
 warn_untyped_fields = True
+
+[coverage:run]
+relative_files = True
