fix: Update sonar workflow.
Signed-off-by: Chris Butler <chris@thebutlers.me>

--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -142,4 +142,6 @@ jobs:
           -Dsonar.python.coverage.reportPaths=coverage.xml
           -Dsonar.tests=tests/
           -Dsonar.verbose=true
+          -Dsonar.projectKey=compliance-trestle
+          -Dsonar.organization=compliance-trestle
           -Dsonar.test.exclusions=tests/**
