--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -6,6 +6,9 @@ on:
     branches:
       - develop
       - main
+  push:
+    branches:
+      - develop
 jobs:
   lint:
     runs-on: ubuntu-latest
