chore: Exclude OSCAL automatically generated code from duplication metrics.
Signed-off-by: Chris Butler <chris@thebutlers.me>

--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -149,3 +149,4 @@ jobs:
           -Dsonar.python.version=3.7
           -Dsonar.projectKey=compliance-trestle
           -Dsonar.organization=compliance-trestle
+          -Dsonar.cpd.exclusions=trestle/oscal/*.py
