fix: Ensure that snoar quality gate only runs when expected.
Signed-off-by: Chris Butler <chris@thebutlers.me>

--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -150,6 +150,7 @@ jobs:
           -Dsonar.organization=compliance-trestle
           -Dsonar.cpd.exclusions=trestle/oscal/*.py
     - name: SonarQube Quality Gate check
+      if: ${{ matrix.os == 'ubuntu-latest' && matrix.python-version == '3.7' }}
       uses: sonarsource/sonarqube-quality-gate-action@master
       # Force to fail step after specific time
       timeout-minutes: 5
