--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -35,6 +35,9 @@ jobs:
     - name: Install build tools
       run: |
         make develop
+    - name: Install Saxon (ubuntu)
+      run: |
+        scripts/ubuntu_saxon_install.sh
     - name: Setup pre-commit
       run: |
         make pre-commit
@@ -126,6 +129,10 @@ jobs:
     - name: Install build tools
       run: |
         make develop
+    - name: Install Saxon (ubuntu)
+      if: ${{ matrix.os == 'ubuntu-latest' }}
+      run: |
+        scripts/ubuntu_saxon_install.sh
     - name: Pytest Fast
       if: ${{ !(matrix.os == 'ubuntu-latest' && matrix.python-version == '3.7') }}
       run: |
