fix: Initial testing of environmental variable setup for linting.
Signed-off-by: Chris Butler <chris@thebutlers.me>

--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -12,6 +12,9 @@ on:
 jobs:
   lint:
     runs-on: ubuntu-latest
+    env:
+      LD_LIBRARY_PATH: "/usr/lib/rt/lib/amd64:{{ env.LD_LIBRARY_PATH }}"
+      PYTHONPATH: "/opt/saxonica/Saxon.C.API/python-saxon"
     steps:
     - name: Don't mess with line endings
       run: |
