--- a/.github/workflows/conventional-pr.yml
+++ b/.github/workflows/conventional-pr.yml
@@ -7,11 +7,17 @@ on:
       - edited
       - synchronize
     branch:
-      - develop
-
+      - 'develop'
+  pull_request_target:
+    types:
+      - opened
+      - edited
+      - synchronize
+    branch:
+      - 'develop'
 jobs:
   lint:
-    if: ${{ github.head_ref != 'develop' }}
+    if: ${{ github.head_ref != 'develop' }
     concurrency: 
       group: ${{ github.head_ref }}-${{ github.workflow }}
       cancel-in-progress: true
@@ -19,7 +25,7 @@ jobs:
     steps:
       # Please look up the latest version from
       # https://github.com/amannn/action-semantic-pull-request/releases
-      - uses: amannn/action-semantic-pull-request@v3.4.0
+      - uses: amannn/action-semantic-pull-request@v3.4.2
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
