--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -2,7 +2,7 @@
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-python-with-github-actions
 name: Trestle PR pipeline
 on:
-  pull_request:
+  pull_request_target:
     branches:
       - develop
       - main
