chore: Accomodate forked repos by separating sonarqube quality gate (#791)
* chore: Accomodate forked repos by separting sonarqube quality gate

Signed-off-by: Chris Butler <chris@thebutlers.me>

* chore: Add triggers for remote branches

Signed-off-by: Chris Butler <chris@thebutlers.me>

* chore(cicd): Correcting CI yaml format.

Signed-off-by: Chris Butler <chris@thebutlers.me>

* fix: Alter CI pipeline to use PR target, potentially avoiding issues for sonarqube

Signed-off-by: Chris Butler <chris@thebutlers.me>

--- a/.github/workflows/conventional-pr.yml
+++ b/.github/workflows/conventional-pr.yml
@@ -1,14 +1,13 @@
 name: "Lint PR"
 
 on:
-  pull_request:
+  pull_request_target:
     types:
       - opened
       - edited
       - synchronize
     branch:
-      - develop
-
+      - 'develop'
 jobs:
   lint:
     if: ${{ github.head_ref != 'develop' }}
@@ -19,7 +18,7 @@ jobs:
     steps:
       # Please look up the latest version from
       # https://github.com/amannn/action-semantic-pull-request/releases
-      - uses: amannn/action-semantic-pull-request@v3.4.0
+      - uses: amannn/action-semantic-pull-request@v3.4.2
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
