--- a/setup.cfg
+++ b/setup.cfg
@@ -35,11 +35,11 @@ install_requires =
     python-dotenv>=0.10.4
     datamodel-code-generator[http]
     python-frontmatter
-    mistune==2.0.0rc1 # Review regularly.
     pywin32 >= 1.0;platform_system=='Windows'
     defusedxml
     openpyxl~=3.0
     Jinja2 >= 3.0.1
+    cmarkgfm==0.6.0 #Update regularly
 
 [options.packages.find]
 include = trestle*
