--- a/.github/workflows/python-push.yml
+++ b/.github/workflows/python-push.yml
@@ -86,9 +86,10 @@ jobs:
         token: ${{ secrets.CODECOV_TOKEN }}
         file: ./coverage.xml
   deploy:
+
     runs-on: ubuntu-latest
     needs: build
-    if: github.ref == 'refs/heads/main'
+    if: github.ref == 'refs/heads/main' && github.repository == 'IBM/compliance-trestle'
     steps:
     - uses: actions/checkout@v2
       with:
