--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -2,7 +2,7 @@
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-python-with-github-actions
 name: Trestle PR pipeline
 on:
-  pull_request_target:
+  pull_request:
     branches:
       - develop
       - main
@@ -141,6 +141,7 @@ jobs:
         path: coverage.xml
 
   sonar:
+    if: github.repository == 'IBM/compliance-trestle'
     runs-on: ubuntu-latest
     needs: test
     steps:
