feat: Handle html tags
Signed-off-by: Ekaterina Nikonova <enikonovad@gmail.com>

--- a/setup.cfg
+++ b/setup.cfg
@@ -39,7 +39,7 @@ install_requires =
     defusedxml
     openpyxl~=3.0
     Jinja2 >= 3.0.1
-    cmarkgfm==0.6.0 #Update regularly
+    cmarkgfm==0.6.* #Update regularly
 
 [options.packages.find]
 include = trestle*
