--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -78,7 +78,11 @@ nav:
       - duplicates_validator: api_reference/trestle.core.duplicates_validator.md
       - err: api_reference/trestle.core.err.md
       - generators: api_reference/trestle.core.generators.md
-      - markdown_validator: api_reference/trestle.core.markdown.markdown_validator.md
+      - markdown:
+        - markdown_api: api_reference/trestle.core.markdown.markdown_api.md
+        - markdown_node: api_reference/trestle.core.markdown.markdown_node.md
+        - markdown_processor: api_reference/trestle.core.markdown.markdown_processor.md
+        - markdown_validator: api_reference/trestle.core.markdown.markdown_validator.md
       - models:
         - actions: api_reference/trestle.core.models.actions.md
         - elements: api_reference/trestle.core.models.elements.md
