refactor and boost coverage
Signed-off-by: Frank Suits <frankst@au1.ibm.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -20,6 +20,7 @@ nav:
 - Tutorials:
   - Intro to trestle workflow: tutorials/trestle_sample_workflow.md
   - Compliance posture: tutorials/continuous-compliance/continuous-compliance.md
+  - SSP, Catalog, and Profile Authoring: tutorials/ssp_profile_catalog_authoring/ssp_profile_catalog_authoring.md
   - Transformer construction: tutorials/task.transformer-construction/transformer-construction.md
   - Task - tanium-to-oscal: tutorials/task.tanuim-to-oscal/transformation.md
 - Trestle command-line interface (CLI):
