--- a/setup.cfg
+++ b/setup.cfg
@@ -33,7 +33,7 @@ install_requires =
     furl
     pydantic[email]>=1.8.2
     python-dotenv>=0.10.4
-    datamodel-code-generator[http]
+    datamodel-code-generator[http] >= 0.11.14
     python-frontmatter
     pywin32 >= 1.0;platform_system=='Windows'
     defusedxml
