fix: Adding benchmarking scripts
Signed-off-by: Chris Butler <chris@thebutlers.me>

--- a/setup.cfg
+++ b/setup.cfg
@@ -40,6 +40,7 @@ install_requires =
     openpyxl~=3.0
     Jinja2 >= 3.0.1
     cmarkgfm==0.6.* #Update regularly
+    orjson
 
 [options.packages.find]
 include = trestle*
