fix: add spec.desctiption to produced yaml

--- a/tests/data/tasks/profile-to-osco/output-disable/osco-profile.yaml
+++ b/tests/data/tasks/profile-to-osco/output-disable/osco-profile.yaml
@@ -4,6 +4,7 @@ metadata:
   name: roks-cis-node
   namespace: openshift-compliance
 spec:
+  description: roks-cis-node
   disableRules:
   - name: xccdf_org.ssgproject.content_rule_file_permissions_kube_apiserver
     rationale: not determinable from specification
