--- a/tests/data/tasks/profile-to-osco/output-set/osco-profile.yaml
+++ b/tests/data/tasks/profile-to-osco/output-set/osco-profile.yaml
@@ -4,6 +4,7 @@ metadata:
   name: name
   namespace: namespace
 spec:
+  description: name
   extends: extends
   setValues:
   - name: myco_minimum_password_length
