--- a/.github/workflows/conventional-pr.yml
+++ b/.github/workflows/conventional-pr.yml
@@ -1,7 +1,7 @@
 name: "Lint PR"
 
 on:
-  pull_request:
+  pull_request_target:
     types:
       - opened
       - edited
@@ -11,9 +11,6 @@ on:
 jobs:
   lint:
     if: ${{ github.head_ref != 'develop' }}
-    concurrency: 
-      group: ${{ github.head_ref }}-${{ github.workflow }}
-      cancel-in-progress: true
     runs-on: ubuntu-latest
     steps:
       # Please look up the latest version from
