--- a/tests/data/tasks/osco/test-osco-to-oscal-1.3.5.config
+++ b/tests/data/tasks/osco/test-osco-to-oscal-1.3.5.config
@@ -1,5 +1,5 @@
 [task.osco-to-oscal]
 
 input-dir =  tests/data/tasks/osco/input-1.3.5
-output-dir = tests/data/tasks/osco/output
+output-dir = tests/data/tasks/osco/output-1.3.5
 output-overwrite = true
